--- a/index.html
+++ b/index.html
@@ -3429,7 +3429,7 @@ input, select, textarea {
 										<li><a href="quarantine-sidebar.html">방역체계</a></li>
 									</ul>
 								</li>
-								<li><a href="distance-sidebar.html">인구밀집도란?</a></li>
+								<li><a href="distance-sidebar.html">진주</a></li>
 								<li><a href="area-sidebar.html">지역별 현황</a>
 									<ul>
 										<li><a href="seoul.html">서울특별시</a>
